Got NHL teams working

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Puckpedia_2024_API Agreement - Anthony Shephard_Signed.pdf
 scraped_teams.csv
+~$nal Project Plan.docx
+__pycache__/PIM.cpython-312.pyc
+__pycache__/salaries.cpython-312.pyc
